Fix the styling of the RSVP form on mobile.

--- a/style.css
+++ b/style.css
@@ -76,14 +76,16 @@ body:not(.rtl) .gp-slide-in-menu .menu-item-has-children > .sub-menu .menu-item-
 }
 
 .rsvp-form div {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 10rem;
+  padding: 1rem;
 }
 
 .rsvp-form div:last-child {
-  width: 50%;
+  width: 90%;
   margin: auto;
+}
+
+.rsvp-form div:last-child input {
+  width: 100%;
 }
 
 .rsvp-attendees-list-container {
@@ -262,6 +264,17 @@ p.payment-instructions, .payment-instructions + ul li {
   .bp-navs > .gp-main-nav-outer > .gp-main-nav-inner {
     display: flex;
     justify-content: space-between;
+  }
+
+  .rsvp-form div {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 10rem;
+  }
+
+  .rsvp-form div:last-child {
+    width: 50%;
+    margin: auto;
   }
 }
 
